# Win32-errors

./: ChangeLog  LICENSE  Win32-errors.cabal  appveyor.yml
System/Win32/: Error.hs  Errors.hs
System/Win32/Error/: Foreign.hs  Mapping.hs  TH.hs  Types.hs
System/Win32/Errors/: Foreign.hs  Mapping.hs  TH.hs  Types.hs
test/: ErrorSpec.hs  Spec.hs
